feat: add passive fingerprinting, reverse DNS expansion, cloud metadata probing; enhance JS security analysis, web source analyzer, vulnerability scanner, service detection, export and UI; add unit tests