@@ -1,19 +1,30 @@
 package it.r2u.anibus.service;
 
-import it.r2u.anibus.model.PortScanResult;
-
-import javafx.application.Platform;
-import javafx.concurrent.Task;
-
 import java.net.InetAddress;
 import java.net.UnknownHostException;
+import java.util.List;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.concurrent.ThreadFactory;
+
+import it.r2u.anibus.model.JavaScriptAnalysisResult;
+import it.r2u.anibus.model.PortScanResult;
+import it.r2u.anibus.service.JavaScriptSecurityAnalyzer.AnalysisDepth;
+import javafx.application.Platform;
+import javafx.concurrent.Task;
 
 /**
  * Background Task that scans a port range on a given host.
+ *
+ * Pipeline per open port (real-time, no blocking):
+ *   1. TCP probe (virtual thread)
+ *   2. Banner grab + service detection → result reported immediately to UI
+ *   3. Parallel enrichment:
+ *        - VulnerabilityScanner (in-memory CVE lookup)
+ *        - JSAnalyzer on HTTP/HTTPS ports (BASIC depth)
+ *      Banner is updated on the JavaFX thread once both complete.
+ *
  * All UI updates are dispatched via the Callbacks interface.
  */
 public class ScanTask extends Task<Void> {
@@ -31,17 +42,16 @@ public class ScanTask extends Task<Void> {
     private final String host;
     private final int startPort;
     private final int endPort;
-    private final int threadCount;
     private final PortScannerService scanner;
     private final Callbacks callbacks;
     private ExecutorService executor;
+    private final JavaScriptSecurityAnalyzer jsAnalyzer = new JavaScriptSecurityAnalyzer();
 
-    public ScanTask(String host, int startPort, int endPort, int threadCount,
+    public ScanTask(String host, int startPort, int endPort,
                     PortScannerService scanner, Callbacks callbacks) {
         this.host        = host;
         this.startPort   = startPort;
         this.endPort     = endPort;
-        this.threadCount = threadCount;
         this.scanner     = scanner;
         this.callbacks   = callbacks;
     }
@@ -59,29 +69,32 @@ public class ScanTask extends Task<Void> {
             callbacks.onStatus("Scanning " + host + " (" + ip + ") — ports " + startPort + "–" + endPort);
 
             CountDownLatch latch = new CountDownLatch(totalPorts);
-            ThreadFactory daemon = r -> { Thread t = new Thread(r); t.setDaemon(true); return t; };
-            executor = Executors.newFixedThreadPool(threadCount, daemon);
+            executor = Executors.newVirtualThreadPerTaskExecutor();
 
             for (int port = startPort; port <= endPort; port++) {
-                if (isCancelled()) break;
+                if (isCancelled()) {
+                    latch.countDown();   // account for skipped port
+                    continue;
+                }
                 final int p = port;
-                executor.submit(() -> {
-                    try {
-                        long latency = scanner.measurePortLatency(ip, p);
-                        if (latency >= 0) {
-                            String banner   = scanner.getBanner(ip, p);
-                            String service  = scanner.getServiceName(p);
-                            String protocol = scanner.getProtocol(p, banner);
-                            String version  = scanner.extractVersion(banner);
-                            Platform.runLater(() ->
-                                callbacks.onResult(new PortScanResult(
-                                    p, service, banner, protocol, latency, version, "Open", "Standard")));
-                        }
-                    } finally {
+
+                // Stage 1 → Stage 2 → Stage 3 (report) → Stage 4 (enrich, parallel)
+                CompletableFuture
+                    .supplyAsync(() -> scanner.measurePortLatency(ip, p), executor)
+                    .thenComposeAsync(latency -> {
+                        if (latency < 0) return CompletableFuture.completedFuture(null);
+                        return CompletableFuture.supplyAsync(
+                            () -> buildBaseResult(ip, p, latency), executor);
+                    }, executor)
+                    .thenAcceptAsync(result -> {
+                        if (result == null) return;
+                        Platform.runLater(() -> callbacks.onResult(result));
+                        enrichConcurrently(result, ip, p);
+                    }, executor)
+                    .whenComplete((v, err) -> {
                         latch.countDown();
                         updateProgress(totalPorts - latch.getCount(), totalPorts);
-                    }
-                });
+                    });
             }
             latch.await();
         } catch (UnknownHostException e) {
@@ -91,6 +104,52 @@ public class ScanTask extends Task<Void> {
             shutdown();
         }
         return null;
+    }
+
+    /** Stage 2: grab banner and detect service/protocol/version. */
+    private PortScanResult buildBaseResult(String ip, int port, long latency) {
+        String banner   = scanner.getBanner(ip, port);
+        String service  = scanner.getServiceName(port);
+        String protocol = scanner.getProtocol(port, banner);
+        String version  = scanner.extractVersion(banner);
+        return new PortScanResult(port, service, banner, protocol, latency, version, "Open", "Standard");
+    }
+
+    /**
+     * Stage 4: VulnerabilityScanner and (HTTP ports) JS analysis run in parallel.
+     * The banner property is updated on the JavaFX thread once both futures complete.
+     */
+    private void enrichConcurrently(PortScanResult result, String ip, int port) {
+        CompletableFuture<String> vulnFuture = CompletableFuture.supplyAsync(() -> {
+            List<VulnerabilityScanner.Vulnerability> vulns =
+                VulnerabilityScanner.scanVulnerabilities(result.getService(), result.getBanner());
+            return vulns.isEmpty() ? "" : VulnerabilityScanner.formatVulnerabilities(vulns);
+        }, executor);
+
+        boolean httpPort = port == 80 || port == 443 || port == 8080 || port == 8443
+                        || port == 8000 || port == 8888 || port == 3000 || port == 5000;
+        CompletableFuture<String> jsFuture = httpPort
+            ? CompletableFuture.supplyAsync(() -> {
+                  String scheme = (port == 443 || port == 8443) ? "https" : "http";
+                  String url = scheme + "://" + ip + ":" + port;
+                  try {
+                      JavaScriptAnalysisResult js = jsAnalyzer.analyzeTarget(url, AnalysisDepth.BASIC);
+                      if (js == null || js.getEndpoints().isEmpty()) return "";
+                      return "[JS] " + js.getEndpoints().size() + " endpoint(s) discovered";
+                  } catch (Exception ignored) { return ""; }
+              }, executor)
+            : CompletableFuture.completedFuture("");
+
+        CompletableFuture.allOf(vulnFuture, jsFuture).thenRun(() -> {
+            String vulns = vulnFuture.join();
+            String js    = jsFuture.join();
+            if (vulns.isEmpty() && js.isEmpty()) return;
+            String base = result.getBanner();
+            StringBuilder enriched = new StringBuilder(base);
+            if (!vulns.isEmpty()) enriched.append("\n").append(vulns);
+            if (!js.isEmpty())    enriched.append("\n").append(js);
+            Platform.runLater(() -> result.bannerProperty().set(enriched.toString()));
+        });
     }
 
     @Override protected void succeeded() { super.succeeded(); callbacks.onCompleted(); }
